fix: マニフェストの修正
